<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro"
    android:orientation="vertical"
    android:background="@drawable/fundo1"
    android:padding="12dp"
    >


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo3"
                android:layout_marginTop="10dp"


                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                >

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/str_novocontato"
                    android:textAlignment="center"
                    android:textSize="29sp"
                    android:textStyle="bold"
                    android:textColor="@color/cor_texto"

                    />

                <ImageButton
                    android:id="@+id/btn_gerenciar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/settings"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="250dp"
                    android:src="@drawable/contatoadd" />

            </RelativeLayout>
<!--_____________NOME_______________-->
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_nome"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"

            />

            <EditText
                android:id="@+id/txt_nomecad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cor_editartexto"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:maxLength="30"


        />

<!--__________TELEFONE___________-->
            <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/str_telefone"
             android:layout_marginBottom="10dp"
             android:textSize="18sp"
        />

            <EditText
            android:id="@+id/txt_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cor_editartexto"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:maxLength="9"

        />
<!--_________________CIDADE__________-->
            <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/str_cidade"

             android:layout_marginBottom="10dp"
             android:textSize="18sp"


        />

    <EditText
        android:id="@+id/txt_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cor_editartexto"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:hint="@string/hint_estado"
        android:maxLength="2"
        />
    <!--______________EMAIL_________-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_email"

        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cor_editartexto"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"

        />

    <!--______________CELULAR_________-->

            <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/str_celular"

             android:layout_marginBottom="10dp"
             android:textSize="18sp"

        />

            <EditText
                android:id="@+id/txt_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/cor_editartexto"

                android:maxLength="9"
                android:inputType="number" />
    <!--______________GRUPO_________-->
<FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="35dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_grupo"
        android:textSize="18sp"

        />


    <Spinner

        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:id="@+id/SP_grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:popupBackground="@color/cor_texto"

        />
</FrameLayout>
    <Button
        android:id="@+id/btn_cadastrar"

        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/str_cadastrar"
        android:drawableEnd="@drawable/iconesavar"
        android:layout_gravity="center"


        />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
