<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/fundo1"
    android:padding="12dp"

    >
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/logo3"
    android:layout_marginTop="10dp"
    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!--_____________Slogan________________-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/str_slogan"
        android:textStyle="italic"
        android:textSize="15sp"

        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"


        />

    <!--_____________Imagem Carta___________-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@drawable/iconecarta2"

        />

    <!--_____________Introdução______________-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/str_comeco"
        android:textSize="15sp"

        android:textAlignment="center"
        android:layout_marginBottom="35dp"

        />


    <!--_____________ Botão ________________-->
    <Button
        android:id="@+id/btn_entrar"

        android:layout_width="175dp"
        android:layout_height="wrap_content"

        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_marginBottom="70dp"

        android:drawableEnd="@drawable/iconeenvia"

        android:text="@string/btn_entrar"
        android:layout_gravity="center"/>




    <!--_____________Direitos________________-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/str_direitos"

        android:textSize="9.7sp"
        />


        </LinearLayout>
 </ScrollView>


</LinearLayout>

